@@ -1,3 +1,8 @@
+2015-08-31  Jean-Louis Martineau <martineau@zmanda.com>
+	* perl/Amanda/Changer/disk.pm: Fix Trap mkdir failure
+	* patching file perl/Amanda/Changer/robot.pm: Fix perl warning
+	* patching file server-src/amcheck-device.pl: Fix
+
 2015-08-27  Jean-Louis Martineau <martineau@zmanda.com>
 	* perl/Amanda/Changer/disk.pm: Trap mkdir failure.
 
